--- a/src/components/Item/item.css
+++ b/src/components/Item/item.css
@@ -1,5 +1,39 @@
-.imageRemera{
-    height: 20rem;
-    width: 15rem;
-    margin: 3rem;
+.imagenRemera{
+    height: 300px;
+    width: 100%;
+}
+.articulo{
+    border: 2px solid black;
+    width: 300px;
+    height: 450px;
+    border-radius: 20px;
+    margin: 0.5rem;
+    background-color: rgb(7, 223, 7);
+}
+.botonDetalle{
+    width: 100px;
+    height: 35px;
+    border: 2px solid white;
+    background-color: rgb(13, 244, 186);
+    color: black;
+    padding: 4px;
+    text-align: center;
+    margin-block: 3px;
+}
+.footerItem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+article section p{
+    color: black;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 3px;
+}
+.nombreProducto{
+    color: black;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 3px;
 }
